# pypedream

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
_docs/: Makefile
_docs/source/: api.rst  conf.py  index.rst
_docs/source/_autosummary/: pypedream.core.context.rst  pypedream.core.logs.rst  pypedream.core.pipelines.rst  pypedream.core.stages.rst  (+4 more)
_docsrc/: api.rst  conf.py  index.rst
_docsrc/_autosummary/: pypedream.core.context.rst  pypedream.core.logs.rst  pypedream.core.pipelines.rst  pypedream.core.rst  pypedream.core.stages.rst  pypedream.ctx.rst  pypedream.exceptions.rst  pypedream.input.rst  pypedream.logging.rst  pypedream.rst
doc/source/: api.rst  conf.py  index.rst
docs/: .buildinfo  about.html  api.html  genindex.html  index.html  objects.inv  py-modindex.html  search 2.html  search.html  searchindex 2.js  searchindex.js
docs/.doctrees/: about.doctree  api.doctree  environment.pickle  index.doctree
docs/_autosummary/: pypedream.core.context.html  pypedream.core.html  pypedream.core.logs.html  pypedream.core.pipelines.html  pypedream.core.stages.html  pypedream.ctx.html  pypedream.exceptions.html  pypedream.html  pypedream.input.html  pypedream.logging.html
docs/_sources/: about.rst.txt  index.rst.txt
docs/doctrees/: index.doctree
docs/source/: conf.py  index.rst
pypedream/: __init__.py  ctx.py  exceptions.py  input.py  logging.py
pypedream/core/: __init__.py  context.py  logs.py  pipelines.py  stages.py
src/pypelite/: __init__.py
tests/core/: test_stages.py
tests/integration/: test_pipelines.py
(+62 files in other folders)
