[tool.poetry]
name = "pypelite"
version = "0.0.1"
description = "lightweight way of coordinating various functions into pipelines for quick iteration and testing before you want to move on to a real orchestration framework."
authors = ["apostoli <79337131+apostolos-geyer@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
attrs = "^23.2.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"
ipywidgets = "^8.1.2"
sphinx = "^7.3.7"
sphinx-autodoc-typehints = "^2.1.0"
pydata-sphinx-theme = "^0.15.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
