[tool.poetry]
name = "pypedream"
version = "0.0.1"
description = "lightweight way of coordinating various functions into pipelines for quick iteration and testing before you want to move on to a real orchestration framework."
authors = ["apostoli <79337131+apostolos-geyer@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
attrs = "^23.2.0"
sphinx-autobuild = "^2024.4.16"
structlog = "^24.1.0"
rich = "^13.7.1"
orjson = "^3.10.3"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"
ipywidgets = "^8.1.2"
sphinx = "^7.3.7"
sphinx-autodoc-typehints = "^2.1.0"
pydata-sphinx-theme = "^0.15.2"
sphinx-rtd-theme = "^2.0.0"
pre-commit = "^3.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
